[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [lib]
# name = "hello_world"
# path = "src/lib/mod.rs"

[dependencies]
colored = "2.1.0"
lopdf = "0.32.0"
unicode-segmentation = "1.10.1"

[dev-dependencies]
mockall = "0.12.1"
