[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "hello_world"
path = "src/lib/mod.rs"

[dependencies]
anyhow = "1.0.79"
chrono = { version = "0.4.38", features = ["serde"] }
colored = "2.1.0"
lopdf = "0.32.0"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
unicode-segmentation = "1.10.1"

[dev-dependencies]
mockall = "0.12.1"
